# kappallm

./: .gitignore  README.md  pyproject.toml
kappallm/: kappa-agent.py
prompting/: kappa-manual.md
