[project]
name = "kappallm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kappy (>=4.1.2,<5.0.0)",
    "litellm (>=1.60.8,<2.0.0)",
    "weave (>=0.51.33,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
